{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 45,
  "lineage": "b7d01066-b87a-94d3-91aa-113446824adc",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:security-group/sg-03932cafea5094c3e",
            "description": "private security group for g1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03932cafea5094c3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "g1-private-sg",
            "name_prefix": "",
            "owner_id": "637423369403",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "g1-private-sg"
            },
            "tags_all": {
              "Name": "g1-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:security-group/sg-082ddcb0e7bd887b5",
            "description": "public security group for g1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ddcb0e7bd887b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Self Refer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "g1-public-sg",
            "name_prefix": "",
            "owner_id": "637423369403",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "g1-public-sg"
            },
            "tags_all": {
              "Name": "g1-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a66ca3880109114",
            "association_id": "eipassoc-0e9bc7c93b9e39ce6",
            "domain": "vpc",
            "id": "eipalloc-04a66ca3880109114",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-06a557bfc4531bf7d",
            "private_dns": "ip-10-0-10-143.sa-east-1.compute.internal",
            "private_ip": "10.0.10.143",
            "public_dns": "ec2-18-229-26-149.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.26.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "g1-nat-2a-eip"
            },
            "tags_all": {
              "Name": "g1-nat-2a-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ab9b80db7430052",
            "association_id": "eipassoc-058365e2aa9b31bc5",
            "domain": "vpc",
            "id": "eipalloc-08ab9b80db7430052",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0dda1e05ab3febfa9",
            "private_dns": "ip-10-0-20-127.sa-east-1.compute.internal",
            "private_ip": "10.0.20.127",
            "public_dns": "ec2-18-230-100-29.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.100.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "g1-nat-2c-eip"
            },
            "tags_all": {
              "Name": "g1-nat-2c-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:internet-gateway/igw-067bc5cb3d08323ca",
            "id": "igw-067bc5cb3d08323ca",
            "owner_id": "637423369403",
            "tags": {
              "Name": "g1-igw"
            },
            "tags_all": {
              "Name": "g1-igw"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a66ca3880109114",
            "connectivity_type": "public",
            "id": "nat-03017bc80a706fb8c",
            "network_interface_id": "eni-06a557bfc4531bf7d",
            "private_ip": "10.0.10.143",
            "public_ip": "18.229.26.149",
            "subnet_id": "subnet-03cce35682baeaf69",
            "tags": {
              "Name": "g1-nat-2a"
            },
            "tags_all": {
              "Name": "g1-nat-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ab9b80db7430052",
            "connectivity_type": "public",
            "id": "nat-0dc658077bac4b00f",
            "network_interface_id": "eni-0dda1e05ab3febfa9",
            "private_ip": "10.0.20.127",
            "public_ip": "18.230.100.29",
            "subnet_id": "subnet-01130a2e317290728",
            "tags": {
              "Name": "g1-nat-2c"
            },
            "tags_all": {
              "Name": "g1-nat-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:route-table/rtb-00160b7db790934cb",
            "id": "rtb-00160b7db790934cb",
            "owner_id": "637423369403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03017bc80a706fb8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g1-pri-rt-2a"
            },
            "tags_all": {
              "Name": "g1-pri-rt-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:route-table/rtb-01c1924b8ac1bed84",
            "id": "rtb-01c1924b8ac1bed84",
            "owner_id": "637423369403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dc658077bac4b00f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g1-pri-rt-2c"
            },
            "tags_all": {
              "Name": "g1-pri-rt-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:route-table/rtb-07d7730d02586501a",
            "id": "rtb-07d7730d02586501a",
            "owner_id": "637423369403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067bc5cb3d08323ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g1-pub-rt"
            },
            "tags_all": {
              "Name": "g1-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0099e8ad6664878f4",
            "route_table_id": "rtb-00160b7db790934cb",
            "subnet_id": "subnet-0caee993dc7bada16"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.pri_rt",
            "module.vpc.aws_subnet.dev_pri_sub",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000871a0151a0bf6a",
            "route_table_id": "rtb-01c1924b8ac1bed84",
            "subnet_id": "subnet-05a6690cf676dfcfb"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.pri_rt",
            "module.vpc.aws_subnet.dev_pri_sub",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad22907846ef0f85",
            "route_table_id": "rtb-00160b7db790934cb",
            "subnet_id": "subnet-08b1e0f6de00036a1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.pri_rt",
            "module.vpc.aws_subnet.prd_pri_sub",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0243fee1f0f7ee1a9",
            "route_table_id": "rtb-01c1924b8ac1bed84",
            "subnet_id": "subnet-0a87765b9027081e2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.pri_rt",
            "module.vpc.aws_subnet.prd_pri_sub",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01299321540fb8057",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-03cce35682baeaf69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00789cfd9cf624754",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-01130a2e317290728"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01299321540fb8057",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-03cce35682baeaf69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00789cfd9cf624754",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-01130a2e317290728"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01299321540fb8057",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-03cce35682baeaf69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00789cfd9cf624754",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-01130a2e317290728"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01299321540fb8057",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-03cce35682baeaf69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00789cfd9cf624754",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-01130a2e317290728"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01299321540fb8057",
            "route_table_id": "rtb-07d7730d02586501a",
            "subnet_id": "subnet-03cce35682baeaf69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:subnet/subnet-0caee993dc7bada16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caee993dc7bada16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1-dev-pri-sub-2a"
            },
            "tags_all": {
              "Name": "g1-dev-pri-sub-2a"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:subnet/subnet-05a6690cf676dfcfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a6690cf676dfcfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1-dev-pri-sub-2c"
            },
            "tags_all": {
              "Name": "g1-dev-pri-sub-2c"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:subnet/subnet-08b1e0f6de00036a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b1e0f6de00036a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1-prd-pri-sub-2a"
            },
            "tags_all": {
              "Name": "g1-prd-pri-sub-2a"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:subnet/subnet-0a87765b9027081e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a87765b9027081e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1-prd-pri-sub-2c"
            },
            "tags_all": {
              "Name": "g1-prd-pri-sub-2c"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:subnet/subnet-03cce35682baeaf69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cce35682baeaf69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1-pub-sub-2a"
            },
            "tags_all": {
              "Name": "g1-pub-sub-2a"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:subnet/subnet-01130a2e317290728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01130a2e317290728",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1-pub-sub-2c"
            },
            "tags_all": {
              "Name": "g1-pub-sub-2c"
            },
            "vpc_id": "vpc-099242edba56e4b80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:637423369403:vpc/vpc-099242edba56e4b80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a432994427096b9b",
            "default_route_table_id": "rtb-011f5694d8af00731",
            "default_security_group_id": "sg-0057a56d527915032",
            "dhcp_options_id": "dopt-0675c4f6f451f09ee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099242edba56e4b80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011f5694d8af00731",
            "owner_id": "637423369403",
            "tags": {
              "Name": "g1-vpc"
            },
            "tags_all": {
              "Name": "g1-vpc"
            }
          }
        }
      ]
    }
  ]
}